--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ $(function(){
 
    
    <!-- Footer -->
-<ul>
+<ul class="footer">
 	<li>
   <footer class="w3-container w3-padding-4 w3-light-grey w3-center w3-opacity w3-xlarge">
     <a href="https://www.facebook.com/Perfectdream11-307540379697872/" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
