--- a/pages/teamtoday.html
+++ b/pages/teamtoday.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+    <meta name="description" content="all about dream11 prediction(fantacy11 prediction) and also livescore and Cricketnews">	
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Perfect Dream11 | Prediction Of Fantacy11</title>
     <link rel="SHORTCUT ICON" type="image/x-icon" href="/images/icon.ico">
