--- a/pages/cricketnews.html
+++ b/pages/cricketnews.html
@@ -178,8 +178,7 @@ $(function(){
       
    <div class="col-md-12" id="cricketnews">   
    <div class="well well-sm "><strong>Cricket News</strong></div> 
-   
-
+   <div class="w3-text-grey"><h3><strong>Hover to know the News</strong></h3></div>
 
    <div class="block image1">
     <div class="layer"></div>
