--- a/pages/cricketnews.html
+++ b/pages/cricketnews.html
@@ -183,7 +183,7 @@ $(function(){
    <div class="block image1">
     <div class="layer"></div>
     <div class="p-container">
-       <p class="img-p">Chris Sole erupts after Hamilton Masakadza is caught at backward point, Scotland v Zimbabwe, 2nd ODI, Edinburgh, June 17, 2017</p>
+       <p class="img-p">CT 2017 a lesson on team balance going forward - Virat Kohili</p>
      </div>
   </div>
    <!-- block -->
@@ -191,7 +191,7 @@ $(function(){
    <div class="block image2">
     <div class="layer"></div>
     <div class="p-container">
-       <p class="img-p"> Sikandar Raza drives for a boundary through cover, Scotland v Zimbabwe, 2nd ODI, Edinburgh, June 17, 2017 </p>
+       <p class="img-p"> Scared we'll be relegated to playing against Ireland, Scotland - Sammy </p>
      </div>
   </div>
    <!-- block -->
