--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ $(function(){
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="/images/pd11(1).jpg" alt="perfectdream11" width="460" height="345">
+        <img class="imageheight" src="/images/pd11(1).jpg" alt="perfectdream11" width="460" height="345">
         <div class="carousel-caption">
         
     <button type="button" class="btn btn-info">
@@ -199,7 +199,7 @@ $(function(){
       </div>
 
       <div class="item">
-        <img src="/images/pd11(2).png" alt="perfectdream11" width="460" height="345">
+        <img class="imageheight" src="/images/pd11(2).png" alt="perfectdream11" width="460" height="345">
         <div class="carousel-caption">
             
     <button type="button" class="btn btn-info">
