--- a/pages/cricketnews.html
+++ b/pages/cricketnews.html
@@ -215,7 +215,7 @@ $(function(){
    <div class="block image5">
     <div class="layer"></div>
     <div class="p-container">
-       <p class="img-p">Faf du Plessis to miss England T20Is </p>
+       <p class="img-p">Kumble resigns, says role now 'untenable'</p>
      </div>
   </div>
    <!-- block --> 
