--- a/pages/termsandconditions.html
+++ b/pages/termsandconditions.html
@@ -174,7 +174,7 @@ $(function(){
     </div><!-- col-md-12 -->
     
    <div class="col-md-12">   
-   <div class="well well-sm"><strong>Term And Conditions</strong></div>  <p class="w3-text-grey" >1.We are not reponsible for the loss of match and money. </p>
+   <div class="well well-sm"><strong>Terms And Conditions</strong></div>  <p class="w3-text-grey" >1.We are not reponsible for the loss of match and money. </p>
         <p class="w3-text-grey" >2.Prediction is based on player's previous match performance,pitch report and weather condition.
        </p>
        <p class="w3-text-grey" >3.Choose your team based on own intinct use this as a tip only.</p>   
