--- a/pages/teamtoday.html
+++ b/pages/teamtoday.html
@@ -293,11 +293,11 @@ $(function(){
         <div class="tab-content">
         <div id="hometab1" class="tab-pane fade active in">
             <h3> team1 info</h3>
-            <img src="" height="250px" alt="engvssa" width="250px">
+            <img src="/images/team1engvssa.png" height="250px" alt="engvssa" width="250px">
             </div>
         <div id="contacttab1" class="tab-pane fade">
             <h3> team2 info</h3>
-            <img src="" height="250" alt="engvssa" width="250">
+            <img src="/images/team2engvssa.png" height="250" alt="engvssa" width="250">
             </div>
         
         
