--- a/pages/teamtoday.html
+++ b/pages/teamtoday.html
@@ -189,7 +189,7 @@ $(function(){
 (11:00 local | 09:00 GMT)</p> 
        
     <p class="w3-text-grey">    
-     <strong>Nertherlands Team</strong>(likely)<br>
+     <strong>Nertherlands Team</strong>(squad)<br>
 Peter Borren (c), Wesley Barresi (w/k), Ben Cooper, Stephan Myburgh, Max O'Dowd, Michael Rippon, Pieter Seelaar, Timm van der Gugten, Roelof van der Merwe, Paul van Meekeren.</p>   
        
     <p class="w3-text-grey"><strong>Zimbabwe Team</strong>(likely)<br>Graeme Cremer (c), Peter Moor (w/k), Hamilton Masakadza, Chris Mpofu, Sean Williams, Malcolm Waller, Craig Ervine, Tendai Chatara, Ryan Burl, Sikandar Raza, Solomon Mire</p>
