--- a/pages/teamtoday.html
+++ b/pages/teamtoday.html
@@ -270,7 +270,7 @@ $(function(){
      <strong>England Team</strong>(squad)<br> 
      EJG Morgan (c), JM Bairstow, SW Billings, JC Buttler†, MS Crane, TK Curran, LA Dawson, AD Hales, CJ Jordan, LS Livingstone, DJ Malan, C Overton, LE Plunkett, JJ Roy, DJ Willey, MA Wood</p>  
        
-    <p class="w3-text-grey"><strong>Southafrica Team</strong>(likely)<br>AB de Villiers (c), F Behardien, RR Hendricks, Imran Tahir, DA Miller, M Morkel, CH Morris, M Mosehle (wk), WD Parnell, D Paterson, AL Phehlukwayo, D Pretorius, T Shamsi, JT Smuts
+    <p class="w3-text-grey"><strong>Southafrica Team</strong>(squad)<br>AB de Villiers (c), F Behardien, RR Hendricks, Imran Tahir, DA Miller, M Morkel, CH Morris, M Mosehle (wk), WD Parnell, D Paterson, AL Phehlukwayo, D Pretorius, T Shamsi, JT Smuts
 </p>
        
     <p class="w3-text-grey">NOTE: Prediction is based on player performance and pitch condition.Please flow your own instinct while selecting a team use this as a tip only.</p>    
