--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ function gestureStart() {
 }
 </script>
 <li>	
-  <a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=www.perfectdream11.com&digit=style/plain/1/&reloads=0" alt="3d printing" title="3d printing" border="0"></a><br />
+  <a href="http://www.perfectdream11.com"><img src="http://www.reliablecounter.com/count.php?page=www.perfectdream11.com&digit=style/plain/1/&reloads=0" alt="3d printing" title="3d printing" border="0"></a><br />
 <a href="http://www.fabbly.com" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;"> Views</a>  
 	</li>	
  
