--- a/pages/termsandconditions.html
+++ b/pages/termsandconditions.html
@@ -154,7 +154,7 @@ $(function(){
 		play: 'play',
 		wrapper: 'flip-clock-small-wrapper'
 	};  
-	var countdown =  - ((new Date().getTime())/1000); // from: 06/18/2017 03:00 pm +0530
+	var countdown =  1498122000 - ((new Date().getTime())/1000); // from: 06/18/2017 03:00 pm +0530
 	countdown = Math.max(1, countdown);
 	$('.clock-builder-output1').FlipClock(countdown, opts);
 });
