--- a/pages/teamtoday.html
+++ b/pages/teamtoday.html
@@ -185,8 +185,7 @@ $(function(){
         <div class="col-md-12" id="teamtoday">   
    <div class="well well-sm center"><strong>Team Today</strong></div>
     <p class="w3-text-grey"><strong>Nertherlands vs Zimbabwe</strong></p> 
-    <p class="w3-text-grey" >3rd Match at The Hague on Jun 24, 2017
-(11:00 local | 09:00 GMT)</p> 
+    <p class="w3-text-grey" >2nd Match at the Amstelveen on Jun 22, 2017</p> 
        
     <p class="w3-text-grey">    
      <strong>Nertherlands Team</strong>(squad)<br>
