--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
           
 <!-- Hidden Sidebar (reveals when clicked on menu icon)-->         
 <nav class="w3-sidebar w3-black w3-animate-right" style="display:none;padding-top:130px;left:0;z-index:5;width:27%;" id="mySidebar">
-
-<h1 style="padding-bottom:25px;">MENU</h1>
+<h1 style="padding-bottom:25px;color:red">MENU</h1>
       
   <a href="javascript:void(0)" id="exitbutton" onclick="closeNav()" class="w3-button w3-black exit w3-display-topleft" style="padding:0 12px;">
     <i class="fa fa-remove"></i>
