--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
     <a href="/pages/termsandconditions.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Terms and Conditions</a> 
   </div>
     
-<img  src="images/final%20logo1.png" height="70px" width="70px">    
+<a href="http://www.perfectdream11.com">    
+<img  src="/images/final%20logo1.png" height="70px" width="70px"> </a>   
+</nav>    
 </nav>
     
 
