--- a/pages/livescore.html
+++ b/pages/livescore.html
@@ -186,7 +186,7 @@ $(function(){
         
    
    <div class="col-md-12" id="livescore">   
-   <div class="well well-sm" style="margin-top: -15.2px"><strong>Live Score</strong></div>   
+   <div class="well well-sm"><strong>Live Score</strong></div>   
        
      <script type="text/javascript"> 
  app="www.cricwaves.com"; mo="f1_kzd"; nt="flash"; mats =""; tor =""; Width='Âpx'; Height='ªpx'; wi ="w"; 
