--- a/pages/cricketnews.html
+++ b/pages/cricketnews.html
@@ -207,7 +207,7 @@ $(function(){
    <div class="block image3">
     <div class="layer"></div>
     <div class="p-container">
-       <p class="img-p">Faf du Plessis to miss England T20Is</p>
+       <p class="img-p">Afghanistan and Ireland granted test status by ICC</p>
      </div>
   </div>
    <!-- block -->
