--- a/pages/teamtoday.html
+++ b/pages/teamtoday.html
@@ -192,7 +192,7 @@ $(function(){
         
         <div class="row">
         <div class="col-md-12" id="teamtoday">   
-   <div class="well well-sm center"><strong>Team Today</strong></div>
+   <div class="well well-sm center"><strong>Team Yesterday</strong></div>
     <p class="w3-text-grey"><strong>Nertherlands vs Zimbabwe</strong></p> 
     <p class="w3-text-grey" >2nd Match at the Amstelveen on Jun 22, 2017</p> 
        
