--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ $(function(){
       
   <ul class="toprightconner">
      <li class="rightconner"> 
-         <h1 class="topfontsize">IND vs WI</h1>
+         <h1 class="topfontsize">NED vs ZIM</h1>
          <div class="clock-builder-output1 flipclockzoom"></div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script type="text/javascript" src="/javascript/flipclock.js"></script>
@@ -169,7 +169,7 @@ $(function(){
 		play: 'play',
 		wrapper: 'flip-clock-small-wrapper'
 	};  
-	var countdown = 1498222800 - ((new Date().getTime())/1000); // from: 06/18/2017 03:00 pm +0530
+	var countdown = 1498291200 - ((new Date().getTime())/1000); // from: 06/18/2017 03:00 pm +0530
 	countdown = Math.max(1, countdown);
 	$('.clock-builder-output1').FlipClock(countdown, opts);
 });
