--- a/pages/teamtoday.html
+++ b/pages/teamtoday.html
@@ -309,7 +309,7 @@ $(function(){
             </div>
         <div id="contacttab1" class="tab-pane fade">
             <h3> team2 info</h3>
-            <img src="/images/engvssateam2" alt="engvssa" height="500" width="350">
+            <img src="/images/engvssateam2.png" alt="engvssa" height="500" width="350">
             </div>
         
         
