--- a/pages/teamtoday.html
+++ b/pages/teamtoday.html
@@ -192,7 +192,7 @@ $(function(){
         
         <div class="row paddingleftright">
         <div class="col-md-12" id="teamtoday">   
-   <div class="well well-sm center"><strong>Team Today</strong></div>
+   <div class="well well-sm center"><strong>Team Comming Soon</strong></div>
     <p class="w3-text-grey"><strong>India vs West Indies</strong></p> 
     <p class="w3-text-grey" >2nd ODI: at Port of Spain, Jun 25, 2017 09:00 local time (13:00 GMT)</p> 
        
