--- a/pages/teamtoday.html
+++ b/pages/teamtoday.html
@@ -245,7 +245,7 @@ KD Karthik, Kuldeep Yadav, B Kumar, Mohammed Shami, HH Pandya, RR Pant, AM Rahan
     <div class="row paddingleftright">
      <div class="col-md-12" style="margin-top: 50px;">   
    <div class="well well-sm" style="height: 50px;">
-    <ul class="commingsoontimmer"><l1><strong>Team Today</strong></l1>
+    <ul class="commingsoontimmer"><l1><strong>Team last week</strong></l1>
         <l1><div class="clock-builder-output2 flipclockzoom1"></div></l1>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script type="text/javascript" src="/javascript/flipclock.js"></script>
