--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ $(function(){
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img class="imageheight" src="/images/final%pic.png" alt="perfectdream11" width="460" height="345">
+        <img class="imageheight" src="/images/finalpic.png" alt="perfectdream11" width="460" height="345">
         <div class="carousel-caption">
         
     <button type="button" class="btn btn-info">
