--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ $(function(){
     </ol>
 
     <!-- Wrapper for slides -->
-	    
+<div class="carousel-inner" role="listbox">    
       <div class="item active">
         <img class="imageheight" src="/images/pd11(1).jpg" alt="perfectdream11" width="460" height="345">
         <div class="carousel-caption">
