--- a/pages/cricketnews.html
+++ b/pages/cricketnews.html
@@ -141,7 +141,7 @@ $(function(){
       
   <ul class="toprightconner">
      <li class="rightconner"> 
-         <h1 class="topfontsize">IND vs WI</h1>
+         <h1 class="topfontsize">SRI vs ZIM</h1>
          <div class="clock-builder-output1 flipclockzoom"></div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script type="text/javascript" src="/javascript/flipclock.js"></script>
