--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -190,7 +190,8 @@ $(function(){
        <div class="well well-sm center"><strong>About</strong></div>
     <p class="w3-text-grey center" id="about">Fantasy Cricket on Dream11 is all about using your cricket knowledge and skill to create your team within a budget of 100 credits. Your team earns points based on how your chosen players perform in real-life matches. Remember, these players have to be chosen before a real-life match begins. So, brush up on your skill & kick start your journey on Dream11.
     <br>
-    Fantasy Cricket is an online game where you create a virtual team of real cricket players by optimizing the allocated budget and score points depending on how your chosen players perform in real life matches. To win a Fantasy Cricket Contest, you must work towards attaining the maximum points and the No. 1 rank in your Fantasy Contest.We can help to predict the players who can perform best in the match. For more details on how to play click here.    
+    Fantasy Cricket is an online game where you create a virtual team of real cricket players by optimizing the allocated budget and score points depending on how your chosen players perform in real life matches. To win a Fantasy Cricket Contest, you must work towards attaining the maximum points and the No. 1 rank in your Fantasy Contest.We can help to predict the players who can perform best in the match. 
+	   This site is all about predicting the dream11 team it also has cricket news and live score updates.For more details on how to play click here.    
     </p>
     <div class="text-center">
      
