--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@ $(function(){
         <img class="imageheight" src="/images/pd11(2).png" alt="perfectdream11" width="460" height="345">
         <div class="carousel-caption">
             
-   <!--  <button type="button" class="btn btn-info">
+   <button type="button" class="btn btn-info">
      <a href="https://fantasycricket.dream11.com/in/" target="_blank"> <span class="glyphicon"></span> Play!</a>
     </button>    
-          <h3 class="text"> Play Dream11 Now</h3>
+         <!--   <h3 class="text"> Play Dream11 Now</h3>
           <p></p> -->
 		
         </div>
