--- a/pages/teamtoday.html
+++ b/pages/teamtoday.html
@@ -304,11 +304,11 @@ $(function(){
         <div class="tab-content">
         <div id="hometab1" class="tab-pane fade active in">
             <h3> team1 info</h3>
-            <img src="/images/engvssateam1.png" alt="engvssa" height="500" width="350">
+            <img src="/images/1.png" alt="engvssa" height="500" width="350">
             </div>
         <div id="contacttab1" class="tab-pane fade">
             <h3> team2 info</h3>
-            <img src="/images/engvssateam2.png" alt="engvssa" height="500" width="350">
+            <img src="/images/2.png" alt="engvssa" height="500" width="350">
             </div>
         
         
